2ºSemestre/LFA/Projeto/geometrics-lfa-07-master/examples/geometricsaux_tests/semantic_errors/semantic_error_1.geom
geometrics: database

/* Should fail -> FigError: f3 already defined */
f3 is {
    point p7 (7,7)
    point p8 (7,7)
} 